обработка поля по клику на input

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
       class="Dnd"
       [class.Dnd--hoverDnd]="dnd.inDragArea"
       appDndFiles="multy"
+      [acceptType]="['image/*']"
       #dnd="appDndFiles"
       (isUploadFile)="isUploadFile($event)"
     >
